--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 astroid==2.4.2
 Django==2.2
+django-cors-headers==3.5.0
 djangorestframework==3.12.1
 isort==5.6.4
 lazy-object-proxy==1.4.3
 mccabe==0.6.1
+Pillow==8.0.1
 psycopg2==2.8.6
 pylint==2.6.0
 pytz==2020.1
