--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ colorama==0.4.3
 cryptography==3.2.1
 Django==2.2
 django-cors-headers==3.5.0
+django-debug-toolbar==3.1.1
 django-storages==1.10.1
 djangorestframework==3.12.1
 docker==4.3.1
@@ -30,6 +31,7 @@ mccabe==0.6.1
 paramiko==2.7.2
 pathspec==0.5.9
 Pillow==8.0.1
+psycopg2==2.8.6
 pycparser==2.20
 pylint==2.6.0
 pylint-django==2.3.0
