--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ docker==4.3.1
 docker-compose==1.25.5
 dockerpty==0.4.1
 docopt==0.6.2
+Faker==5.0.2
 future==0.16.0
 idna==2.10
 install==1.3.4
@@ -41,6 +42,7 @@ pyrsistent==0.17.3
 python-dateutil==2.8.1
 pytz==2020.1
 PyYAML==5.3.1
+redis==3.5.3
 reportlab==3.5.55
 requests==2.24.0
 s3transfer==0.3.3
@@ -48,6 +50,7 @@ semantic-version==2.5.0
 six==1.15.0
 sqlparse==0.4.1
 termcolor==1.1.0
+text-unidecode==1.3
 texttable==1.6.3
 toml==0.10.1
 urllib3==1.25.11
