--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,12 @@ env
 
 
 ### Django ###
+### Django ###
+*.log
+*.pot
 *.pyc
+__pycache__/
+local_settings.py
+db.sqlite3
+db.sqlite3-journal
+media
